--- a/src/style.css
+++ b/src/style.css
@@ -7,7 +7,7 @@ body {
   background-color: #292524;
   color: #fafaf9;
   font-family: "Sono", sans-serif;
-  padding: 48px 64px;
+  padding: 48px 64px 0px;
 }
 
 .hidden {
@@ -21,6 +21,17 @@ body {
   font-size: 32px;
   font-weight: 600;
   margin-top: 24px;
+}
+
+.root {
+  max-width: 1500px;
+  margin: 0 auto;
+}
+
+.disputed {
+  color: #ef4444;
+  font-weight: 600;
+  margin-right: 10px;
 }
 
 .container {
@@ -38,11 +49,13 @@ body {
   display: grid;
   grid-template-columns: 250px 1fr;
   gap: 48px;
+  height: calc(100vh - 48px - 68px - 40px);
 }
 
 @media (max-width: 900px) {
   .main {
     grid-template-columns: 1fr;
+    height: auto;
   }
 }
 /*ELEMENTS*/
@@ -90,6 +103,11 @@ h1 {
   }
 }
 
+section {
+  overflow: scroll;
+  padding-bottom: 40px;
+}
+
 .tag {
   text-transform: uppercase;
   font-size: 14px;
@@ -121,6 +139,10 @@ h1 {
 }
 .vote-buttons button:hover {
   background-color: #292524;
+}
+
+.vote-buttons button:disabled {
+  background-color: #44403c;
 }
 
 ul {
@@ -209,8 +231,8 @@ ul {
 }
 
 @media (max-width: 1000px) {
-  bodu {
-    padding: 32px 48px;
+  body {
+    /* padding: 32px 48px;*/
   }
   .fact-form {
     flex-direction: column;
